# script_tuner

./: .env.example  README.md  pyproject.toml
docs/: status.md
docs/decisions/: 0007-llm-client-provider-agnostic-and-caching.md  0008-pause-token-strip-on-llm-input.md  0009-switchboard-turn-reconstruction.md  0010-switchboard-license-policy.md  0011-corpus-adapter-interface.md
docs/design/: finetuning_pipeline.md  finetuning_pipeline_ko.md  preprocessing_pipeline.md
report/: metrics_summary.md  samples.md
scripts/: push_to_hf.py
scripttuner/: cli.py  corpora.py
scripttuner/data_sources/: sbcsae.py  switchboard.py
scripttuner/llm/: openai_compatible.py
scripttuner/persistence/: cache.py  jsonl.py
scripttuner/preprocessing/: ir.py  pairs.py
scripttuner/preprocessing/chat/: cleaner.py  parser.py
scripttuner/preprocessing/switchboard/: __init__.py  cleaner.py  parser.py
scripttuner/training/: __init__.py  evaluate.py  formatters.py  plot.py  split.py  style.py  train.py
tests/: test_cli.py
tests/data_sources/: test_switchboard.py
tests/persistence/: test_cache.py  test_jsonl.py
tests/preprocessing/: test_pairs.py
tests/preprocessing/chat/: test_cleaner.py  test_parser.py
tests/preprocessing/switchboard/: test_cleaner.py  test_parser.py
tests/training/: test_evaluate.py  test_finetune_prep.py  test_plot.py
